2007-02-20  Akim Demaille  <demaille@gostai.com>

	Add spurious .
	* src/uvalue.cc (UValue::add): Remove a spurious dot I introduced
	in [764].

2007-02-20  Akim Demaille  <demaille@gostai.com>

	2007-02-20  Matthieu Nottale  <nottale@gostai.com>
	Fix a double-free problem caused by a missing copy.
	* src/uatcandidate.cc: Copy the UValue passed to UExpression ctor.

	2007-02-20  Matthieu Nottale  <nottale@gostai.com>
	Increase max receive buffer size to 1M on bsd and ghost connections
	* src/network/bsdnet/connection.hh: Here,
	* src/ughostconnection.hh: and here.

	2007-02-20  Akim Demaille  <demaille@gostai.com>
	Missing parens
	* src/uqueue.cc (UQueue::pop): Restore a pair of parens that
	I removed in [501].
	Thanks to MN (and apologies).

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Simplification
	* src/ucommandqueue.hh, src/ucommandqueue.cc (popCommand): Here.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Tidy uobj.cc
	* src/uobj.cc (remove): New.
	(~UObj): Use it.
	(UWaitCounter): Move its methods...
	* src/utypes.hh: here.
	(UWaitCounter::id): Now an UString.
	(~UWaitCounter): Remove, now useless.
	* src/ucommand.cc: Adjust.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Racfor buildfullname
	* src/uvariablename.cc: This code is really really hard to
	understand.  There seems to be a call the resolve_aliases
	hidden right afterward these bits, but I'm not sure...

2007-02-20  Akim Demaille  <demaille@gostai.com>

	UCommand::tmp_*
	* src/ucommand.hh, src/ucommand.cc (tmp_phase, tmp_time): remove.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Use find0
	* src/ucommand.cc (UCommand::scanGroups)
	(UCommand_ASSIGN_VALUE::execute_function_call): here.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Use find0
	* src/uvariablename.cc (UVariableName::getVariable)
	(UVariableName::getFunction, UVariableName::buildFullname): Here.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Add missing consts