@@ -1,5 +1,13 @@
 2007-02-20  Akim Demaille  <demaille@gostai.com>
 
+	More UValue ctors
+	* src/uvalue.hh, src/uvalue.cc
+	(UValue::UValue (dataType, const char*)): New.
+	Use it.
+	Use other ctors.
+
+2007-02-20  Akim Demaille  <demaille@gostai.com>
+
 	Add spurious .
 	* src/uvalue.cc (UValue::add): Remove a spurious dot I introduced
 	in [764].
